clean up/ fix overlapping elements on  layout on post detail

--- a/src/components/PostDetail/PostDetail.css
+++ b/src/components/PostDetail/PostDetail.css
@@ -41,19 +41,19 @@
   border-radius: 5px;
   margin-top: 5px;
 }
+
 .desc-price-container {
   display: grid;
   grid-template-rows: 4fr 1fr;
   padding: 10px 10px 10px 10px;
   background-color: black;
   border: 1px solid grey;
-  /* height: 150px; */
   overflow: auto;
 }
 
 .title-container {
   display: grid;
-  grid-template-columns: 50px auto;
+  grid-template-columns: 80px auto;
   gap: 10px;
   padding: 8px 0px 4px 0px;
   background-color: black;
@@ -110,6 +110,7 @@
   color: #ffffdb;
   text-shadow: 0 0 2px #00000096;
   font-family: 'Raleway', sans-serif;
+  text-align: center;
 }
 
 .price-details {
@@ -582,7 +583,7 @@
   width: 100%;
   max-width: 400px;
   border: 1px solid black;
-  margin: 0.5rem;
+  margin: 0.25rem 0;
   border: 1px solid rgba(255, 255, 255, 0.3);
   text-shadow: 1px 1px 4px #0d00ff;
 }
@@ -602,7 +603,6 @@
 @media (max-width: 768px) {
   .message-about-piece-button {
     font-size: 1rem;
-    padding: 10px 20px;
   }
 }
 
